fixed formatting and various stylings not showing properly

--- a/public/Content/survey_styles.css
+++ b/public/Content/survey_styles.css
@@ -269,8 +269,7 @@ input[type="submit"]:hover {
 
 .navbar-text {
     color: rgb(51, 87, 206);
-    /*margin-left: 100px;*/
-    padding: 5px;
+    margin-left: 100px;
 }
 
 .navbar-nav {
